Fix career table positions on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5431,7 +5431,7 @@ color: #FFFFFF;
 	color: #000;
 	border: none;
 	border-top: 1px solid rgba(147, 161, 175, 0.6);
-	line-height: 6px;
+	line-height: 1.5em;
 }
 
 .careers-position-title {
